# halo2-browser

./: .gitignore  Cargo.toml
halo2-repl/: pnpm-lock.yaml
halo2-wasm/: Cargo.toml
halo2-wasm/scripts/: build-js.sh  build-web.sh  build.sh  package.template.json
halo2-wasm/template/: Cargo.toml  build.sh
halo2-wasm/template/example/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
halo2-wasm/template/example/src/: index.html  index.ts  worker.ts
halo2-wasm/template/src/: lib.rs
