[package]
name = "halo2-wasm-template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"

halo2-base = { git = "https://github.com/Cardinal-Cryptography/halo2-lib.git", branch = "aleph", features = [
    "halo2-cc",
] }

halo2-wasm = { path = "..", default-features = false }

[features]
default = []
#default = ["rayon"]
#rayon = ["halo2-wasm/rayon"]
